--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ body, html{
 
 
 }
+
+.menu1:hover{
+	color:grey;
+	font-weight: bold;
+	transform: scale(1.2);
+
+}
 .text{
 	margin-bottom: 0px ;
 	color: white;
@@ -109,8 +116,15 @@ body, html{
 
 .menu2 img{
 	display: flex;
-	margin-left: 200px;
+	margin-left: 100px;
+	margin-bottom: 15px;
 
+
+}
+img:hover{
+
+	transform: scale(1.5);
+	transition: 1.2s;
 
 }
 
